--- a/src/App.css
+++ b/src/App.css
@@ -9,16 +9,22 @@
   box-sizing: border-box;
 }
 
+#root{
+  width: 100%;
+ 
+}
+
 body {
   background: #8758ff;
   display: flex;
   justify-content: center;
   align-items: center;
+  width: 100%;
 }
 
-.App {
+/* .App {
   text-align: center;
-}
+} */
 
 h1 {
   color: #fff;
@@ -33,17 +39,15 @@ h1 {
   border-radius: 5px;
 }
 
-.TodoForm {
-  width: 100%;
-}
+
 
 .todo-input {
   outline: none;
   background: none;
   border: 1px solid #8758ff;
   padding: 0.5rem 1rem;
-  margin-top: 1rem;
-  margin-bottom: 2rem;
+  /* margin-top: 1rem;
+  margin-bottom: 2rem; */
   width: 300px;
   color: #fff;
 }
